# dictionarybot

./: .env.example  .gitignore  README.md  pyproject.toml
src/dictionarybot/: __init__.py  app.py  config.py  main.py
src/dictionarybot/bot/: handlers.py  keyboards.py  middleware.py  states.py
src/dictionarybot/db/: models.py  repositories.py  session.py
src/dictionarybot/services/: fsrs.py  openai_service.py
src/dictionarybot/utils/: text.py
tests/: test_config.py  test_import_parsing.py  test_repositories.py  test_text.py
