[project]
name = "dictionarybot"
version = "0.1.0"
description = "Telegram AI dictionary bot with FSRS reviews and OpenAI-powered associations."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17,<4.0",
    "aiosqlite>=0.20,<1.0",
    "asyncpg>=0.30,<1.0",
    "fsrs>=6.0,<7.0",
    "greenlet>=3.1,<4.0",
    "openai>=1.99,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pypdf>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
]

[project.scripts]
dictionarybot = "dictionarybot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictionarybot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
